# imaging_lidar_place_recognition

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/: run.launch  rviz.rviz
src/: image_handler.h  keyframe.cpp  keyframe.h  loop_detection.cpp  loop_detection.h  loop_detection_node.cpp  parameters.h
